Upgrade to JDK 17 (#13)
* Upgrade to JDK 17

* Add maven wrapper to use Maven 3.8.8